// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetPasswordScreen isSubmitDisabled returns false when \`isEnterpriseDomain\` is false 1`] = `
Array [
  "updateEntity",
  "lock",
  "id",
  "clearGlobalError",
]
`;

exports[`ResetPasswordScreen isSubmitDisabled returns true when \`isEnterpriseDomain\` is true 1`] = `
Array [
  "updateEntity",
  "lock",
  "id",
  "setGlobalError",
  "error,forgotPassword,enterprise_email",
]
`;
